--- a/src/views/HomePage/HomePage.module.css
+++ b/src/views/HomePage/HomePage.module.css
@@ -23,7 +23,7 @@
 .li {
   list-style: none;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  border: 1px solid #a52a62;
+  border: 1px solid #2a74a5;
   opacity: 0.75;
   transition: opacity 0.5s;
   cursor: pointer;
