--- a/src/components/SearchBar/SearchBar.module.css
+++ b/src/components/SearchBar/SearchBar.module.css
@@ -15,7 +15,7 @@
   display: flex;
   width: 100%;
   max-width: 600px;
-  background-color: #a52a62;
+  background-color: #fc3908;
   border-radius: 3px;
   overflow: hidden;
 }
@@ -25,7 +25,7 @@
   width: 100%;
   font: inherit;
   font-size: 20px;
-  border: 1px solid #a52a62;
+  border: 1px solid #fc3908;
   outline: none;
   padding-left: 4px;
   padding-right: 4px;
@@ -39,7 +39,7 @@
   display: inline-block;
   width: 48px;
   height: 48px;
-  border: 1px solid #a52a62;
+  border: 1px solid #f85210;
   background-image: url('https://image.flaticon.com/icons/svg/149/149852.svg');
   background-size: 40%;
   background-repeat: no-repeat;
