--- a/src/views/HomePage/HomePage.module.css
+++ b/src/views/HomePage/HomePage.module.css
@@ -5,7 +5,7 @@
 
 .h1 {
   text-align: center;
-  color: #10eee3;
+  color: hsl(7, 87%, 50%);
   padding-bottom: 20px;
   font-weight: 700;
   font-size: 40px;
@@ -23,7 +23,7 @@
 .li {
   list-style: none;
   transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  border: 1px solid #2a74a5;
+  border: 1px solid #fd261f;
   opacity: 0.75;
   transition: opacity 0.5s;
   cursor: pointer;
