--- a/src/views/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/views/MovieDetailsPage/MovieDetailsPage.module.css
@@ -28,14 +28,24 @@
 }
 
 .button:hover {
-  color: #a52a62;
+  color: hsl(0, 100%, 56%);
+}
+
+.h1 {
+  color: #ff2e13;
+  text-align: left;
+  font-size: 40px;
+  font-weight: bold;
+  margin: 30px 0 0 0;
+  padding: 0 0 0 40px;
+  letter-spacing: 1px;
 }
 
 .h2 {
-  color: #a52a62;
-  font-weight: 400;
+  color: #030303;
+  font-weight: bold;
   text-align: left;
-  font-size: 40px;
+  font-size: 30px;
   margin: 30px 0 0 0;
   padding: 0 0 0 40px;
   letter-spacing: 1px;
@@ -65,20 +75,14 @@
   line-height: 20px;
 }
 
-.links {
-  margin-top: 40px;
-  font-weight: 500;
-  font-size: 20px;
-  text-decoration: none;
-  cursor: pointer;
-  color: black;
-}
 .link {
+  color: #ff2e13;
+  font-weight: bold;
   text-decoration: none;
   cursor: pointer;
   padding: 0 40px 0 40px;
   font-size: 18px;
 }
 .link:hover {
-  color: #a52a62;
+  color: #f72222;
 }
